新增了很多算法题解

--- a/docs/algorithm/两个键的键盘.md
+++ b/docs/algorithm/两个键的键盘.md
@@ -1,7 +1,9 @@
 ---
 title: 两个键的键盘
 createTime: 2025/02/23 13:12:45
-permalink: /algorithm/g6gpzdit/
+permalink: /article/g6gpzdit/
+tags:
+  - 贪心
 ---
 
 ## [650. 两个键的键盘](https://leetcode.cn/problems/2-keys-keyboard/)
@@ -43,10 +45,8 @@ permalink: /algorithm/g6gpzdit/
 
 最小操作次数方案等价于以下操作流程：
 
-1. 起始对长度为 1 的记事本字符进行 1 次 `Copy All` + k1−1 次 `Paste` 操作（消耗次数为
-k1，得到长度为 k1 的记事本长度）；
-2. 对长度为为 k1 的记事本字符进行 1 次 `Copy All` + k2−1 次 `Paste` 操作
-（消耗次数为 k1+k2，得到长度为 k1∗k2 的记事本长度）
+1. 起始对长度为 1 的记事本字符进行 1 次 `Copy All` + k1−1 次 `Paste` 操作（消耗次数为 k1，得到长度为 k1 的记事本长度）；
+2. 对长度为为 k1 的记事本字符进行 1 次 `Copy All` + k2−1 次 `Paste` 操作 （消耗次数为 k1+k2，得到长度为 k1∗k2 的记事本长度）
 3. ...
 
 最终经过 k 次“动作”之后，得到长度为 n 的记事本长度，即有：
