--- a/docs/algorithm/合并两个有序数组.md
+++ b/docs/algorithm/合并两个有序数组.md
@@ -1,7 +1,7 @@
 ---
 title: 合并两个有序数组
 createTime: 2025/02/23 15:48:24
-permalink: /algorithm/07hld89x/
+permalink: /article/07hld89x/
 ---
 ## [88. 合并两个有序数组](https://leetcode.cn/problems/merge-sorted-array/)
 
