--- a/docs/algorithm/合并区间.md
+++ b/docs/algorithm/合并区间.md
@@ -1,7 +1,7 @@
 ---
 title: 合并区间
 createTime: 2025/02/23 16:02:28
-permalink: /algorithm/me4xllsa/
+permalink: /article/me4xllsa/
 ---
 ## [56. 合并区间](https://leetcode.cn/problems/merge-intervals/)
 
