--- a/docs/algorithm/最大数.md
+++ b/docs/algorithm/最大数.md
@@ -1,7 +1,7 @@
 ---
 title: 最大数
 createTime: 2025/02/23 20:56:50
-permalink: /algorithm/nruoc9fr/
+permalink: /article/nruoc9fr/
 ---
 ## [179. 最大数](https://leetcode.cn/problems/largest-number/)
 
