--- a/docs/algorithm/颜色分类.md
+++ b/docs/algorithm/颜色分类.md
@@ -1,7 +1,7 @@
 ---
 title:  颜色分类
 createTime: 2025/02/23 21:44:51
-permalink: /algorithm/d08u25cy/
+permalink: /article/d08u25cy/
 ---
 ## [75. 颜色分类](https://leetcode.cn/problems/sort-colors/)
 
