--- a/docs/algorithm/有序数组的平方.md
+++ b/docs/algorithm/有序数组的平方.md
@@ -1,7 +1,9 @@
 ---
 title: 有序数组的平方
 createTime: 2025/02/23 15:16:37
-permalink: /algorithm/g5ra2y17/
+permalink: /article/g5ra2y17/
+tags:
+  - 双指针
 ---
 ## [977. 有序数组的平方](https://leetcode.cn/problems/squares-of-a-sorted-array/)
 
@@ -93,7 +95,7 @@ class Solution {
 - 时间复杂度：O(n)，其中 n 是数组 nums 的长度。
 - 空间复杂度：O(1)。除了存储答案的数组以外，我们只需要维护常量空间。
 
-### 左右指针，从大到小填充ans。
+## 左右指针，从大到小填充ans。
 
 注意到平方数组只可能是先减后增或递增的，所以平方数组的最大值一定在两端取得，所以我们可以用左右指针从两端往中间“磨”。
 
