--- a/docs/algorithm/移除元素.md
+++ b/docs/algorithm/移除元素.md
@@ -1,7 +1,7 @@
 ---
 title: 移除元素
 createTime: 2025/02/23 20:10:32
-permalink: /algorithm/kelia1zy/
+permalink: /article/kelia1zy/
 ---
 ## [27. 移除元素](https://leetcode.cn/problems/remove-element/)
 
